[gd_scene load_steps=32 format=3 uid="uid://basvp0lotdhr4"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_wsfyn"]
[ext_resource type="Texture2D" uid="uid://dh4naw2jio32x" path="res://Assets/Buttons/resumeButton.png" id="2_a2w3w"]
[ext_resource type="Texture2D" uid="uid://b3jqryleewu6g" path="res://Assets/Buttons/resumeButtonActive.png" id="3_314bl"]
[ext_resource type="Texture2D" uid="uid://b2gjq2fflbojp" path="res://Assets/Buttons/resumeButtonHover.png" id="4_0ep4j"]
[ext_resource type="Texture2D" uid="uid://cwogioybombwc" path="res://Assets/Buttons/saveButton.png" id="5_guxne"]
[ext_resource type="Texture2D" uid="uid://3mmteuao17ky" path="res://Assets/Buttons/saveButtonActive.png" id="6_2yvsr"]
[ext_resource type="Texture2D" uid="uid://bjhy41a5w5con" path="res://Assets/Buttons/saveButtonHover.png" id="7_gw3oy"]
[ext_resource type="Texture2D" uid="uid://uq53lf1fbkm1" path="res://Assets/Buttons/loadButton.png" id="8_cryym"]
[ext_resource type="Texture2D" uid="uid://w0t773p2ccy7" path="res://Assets/Buttons/loadButtonActive.png" id="9_l4soa"]
[ext_resource type="Texture2D" uid="uid://f6pjm437mnhv" path="res://Assets/Buttons/loadButtonHover.png" id="10_q7mpc"]
[ext_resource type="Texture2D" uid="uid://bpcysodc5qtsu" path="res://Assets/Buttons/optionsLargeButton.png" id="11_7ycb1"]
[ext_resource type="Texture2D" uid="uid://cifj8puxeutex" path="res://Assets/Buttons/optionsLargeButtonActive.png" id="12_4anuo"]
[ext_resource type="Texture2D" uid="uid://c8qegmgbq7prr" path="res://Assets/Buttons/optionsLargeButtonHover.png" id="13_t2bat"]
[ext_resource type="Texture2D" uid="uid://coonvrxb1y5pp" path="res://Assets/Buttons/quitToMenuButton.png" id="14_hojqf"]
[ext_resource type="Texture2D" uid="uid://bmsoagrxdctka" path="res://Assets/Buttons/quitToMenuButtonActive.png" id="15_0x7ld"]
[ext_resource type="Texture2D" uid="uid://br3mc2f3akacc" path="res://Assets/Buttons/quitToMenuButtonHover.png" id="16_p57g2"]
[ext_resource type="Texture2D" uid="uid://bw145fxiiktib" path="res://Assets/Buttons/quitToDesktopButton.png" id="17_7w0sd"]
[ext_resource type="Texture2D" uid="uid://4yas78gv3tv7" path="res://Assets/Buttons/quitToDesktopButtonActive.png" id="18_c3ibn"]
[ext_resource type="Texture2D" uid="uid://bclawraucnwpe" path="res://Assets/Buttons/quitToDesktopButtonHover.png" id="19_7rv20"]
[ext_resource type="Texture2D" uid="uid://baewrh01lqwml" path="res://Assets/Backgrounds/quitPopup.png" id="20_stpi2"]
[ext_resource type="Texture2D" uid="uid://byik1scgxuoya" path="res://Assets/Buttons/confirmQuitButton.png" id="21_cyi8l"]
[ext_resource type="Texture2D" uid="uid://beim1sgv1t15r" path="res://Assets/Buttons/confirmQuitButtonActive.png" id="22_vhu4t"]
[ext_resource type="Texture2D" uid="uid://b5ghbqaopx14t" path="res://Assets/Buttons/confirmQuitButtonHover.png" id="23_jo0f1"]
[ext_resource type="Texture2D" uid="uid://dooue3xe4qiin" path="res://Assets/Buttons/noConfirmQuitButton.png" id="24_l22v6"]
[ext_resource type="Texture2D" uid="uid://ctcir6c32ws46" path="res://Assets/Buttons/noConfirmQuitButtonActive.png" id="25_3k4kh"]
[ext_resource type="Texture2D" uid="uid://c66k1gab0givo" path="res://Assets/Buttons/noConfirmQuitButtonHover.png" id="26_ft47l"]
[ext_resource type="Texture2D" uid="uid://d3dounu6gqovc" path="res://Assets/Buttons/blackBg.png" id="27_q6gvq"]
[ext_resource type="Texture2D" uid="uid://b5nyof2ilo4dw" path="res://Assets/Backgrounds/quitToMenuPopup.png" id="27_wkx50"]
[ext_resource type="PackedScene" uid="uid://dmpqsvacpfd63" path="res://load_game_menu.tscn" id="28_bt3gu"]
[ext_resource type="PackedScene" uid="uid://dtmx316mjeirl" path="res://OptionsMenu.tscn" id="29_i7bq4"]
[ext_resource type="PackedScene" uid="uid://ba7ngwob15mys" path="res://save_game_menu.tscn" id="30_8q88c"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wsfyn")

[node name="Control" type="Control" parent="."]
visible = false
light_mask = 2
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResumeButton" type="TextureButton" parent="Control"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = 560.0
offset_top = 115.0
offset_right = 1360.0
offset_bottom = 215.0
texture_normal = ExtResource("2_a2w3w")
texture_pressed = ExtResource("3_314bl")
texture_hover = ExtResource("4_0ep4j")

[node name="SaveButton" type="TextureButton" parent="Control"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = 560.0
offset_top = 265.0
offset_right = 960.0
offset_bottom = 365.0
texture_normal = ExtResource("5_guxne")
texture_pressed = ExtResource("6_2yvsr")
texture_hover = ExtResource("7_gw3oy")

[node name="LoadButton" type="TextureButton" parent="Control"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = 560.0
offset_top = 415.0
offset_right = 960.0
offset_bottom = 515.0
texture_normal = ExtResource("8_cryym")
texture_pressed = ExtResource("9_l4soa")
texture_hover = ExtResource("10_q7mpc")

[node name="OptionsButton" type="TextureButton" parent="Control"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = 560.0
offset_top = 565.0
offset_right = 1360.0
offset_bottom = 665.0
texture_normal = ExtResource("11_7ycb1")
texture_pressed = ExtResource("12_4anuo")
texture_hover = ExtResource("13_t2bat")

[node name="QuitToMenuButton" type="TextureButton" parent="Control"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = 560.0
offset_top = 715.0
offset_right = 960.0
offset_bottom = 815.0
texture_normal = ExtResource("14_hojqf")
texture_pressed = ExtResource("15_0x7ld")
texture_hover = ExtResource("16_p57g2")

[node name="QuitButton" type="TextureButton" parent="Control"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = 560.0
offset_top = 865.0
offset_right = 960.0
offset_bottom = 965.0
texture_normal = ExtResource("17_7w0sd")
texture_pressed = ExtResource("18_c3ibn")
texture_hover = ExtResource("19_7rv20")

[node name="QuitPopup" type="Control" parent="Control"]
visible = false
light_mask = 2
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 1000.0
offset_bottom = 580.0

[node name="Sprite2D2" type="Sprite2D" parent="Control/QuitPopup"]
light_mask = 2
z_index = 1
texture = ExtResource("20_stpi2")

[node name="ConfirmQuitButton" type="TextureButton" parent="Control/QuitPopup"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = -200.0
offset_top = -61.0
offset_right = 200.0
offset_bottom = 39.0
texture_normal = ExtResource("21_cyi8l")
texture_pressed = ExtResource("22_vhu4t")
texture_hover = ExtResource("23_jo0f1")

[node name="NoConfirmQuitButton" type="TextureButton" parent="Control/QuitPopup"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = -200.0
offset_top = 89.0
offset_right = 200.0
offset_bottom = 189.0
texture_normal = ExtResource("24_l22v6")
texture_pressed = ExtResource("25_3k4kh")
texture_hover = ExtResource("26_ft47l")

[node name="QuitPopup2" type="Control" parent="Control"]
visible = false
light_mask = 2
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 1000.0
offset_bottom = 580.0

[node name="Sprite2D2" type="Sprite2D" parent="Control/QuitPopup2"]
light_mask = 2
z_index = 1
texture = ExtResource("27_wkx50")

[node name="ConfirmQuitToMenuButton" type="TextureButton" parent="Control/QuitPopup2"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = -200.0
offset_top = -61.0
offset_right = 200.0
offset_bottom = 39.0
texture_normal = ExtResource("21_cyi8l")
texture_pressed = ExtResource("22_vhu4t")
texture_hover = ExtResource("23_jo0f1")

[node name="NoConfirmQuitToMenuButton" type="TextureButton" parent="Control/QuitPopup2"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = -200.0
offset_top = 89.0
offset_right = 200.0
offset_bottom = 189.0
texture_normal = ExtResource("24_l22v6")
texture_pressed = ExtResource("25_3k4kh")
texture_hover = ExtResource("26_ft47l")

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(960, 165)
texture = ExtResource("27_q6gvq")

[node name="Sprite2D2" type="Sprite2D" parent="Control"]
position = Vector2(960, 315)
texture = ExtResource("27_q6gvq")

[node name="Sprite2D3" type="Sprite2D" parent="Control"]
position = Vector2(960, 465)
texture = ExtResource("27_q6gvq")

[node name="Sprite2D4" type="Sprite2D" parent="Control"]
position = Vector2(960, 615)
texture = ExtResource("27_q6gvq")

[node name="Sprite2D5" type="Sprite2D" parent="Control"]
position = Vector2(960, 765)
texture = ExtResource("27_q6gvq")

[node name="Sprite2D6" type="Sprite2D" parent="Control"]
position = Vector2(960, 915)
texture = ExtResource("27_q6gvq")

[node name="LoadGameMenu" parent="Control" instance=ExtResource("28_bt3gu")]
visible = false
layout_mode = 1

[node name="OptionsMenu" parent="Control" instance=ExtResource("29_i7bq4")]
visible = false
layout_mode = 1

[node name="SaveGameMenu" parent="Control" instance=ExtResource("30_8q88c")]
visible = false
layout_mode = 1

[connection signal="button_up" from="Control/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="Control/SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="button_up" from="Control/LoadButton" to="." method="_on_load_button_button_up"]
[connection signal="button_up" from="Control/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="Control/QuitToMenuButton" to="." method="_on_quit_to_menu_button_button_up"]
[connection signal="button_up" from="Control/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="Control/QuitPopup/ConfirmQuitButton" to="." method="_on_confirm_quit_button_button_up"]
[connection signal="button_up" from="Control/QuitPopup/NoConfirmQuitButton" to="." method="_on_no_confirm_quit_button_button_up"]
[connection signal="button_up" from="Control/QuitPopup2/ConfirmQuitToMenuButton" to="." method="_on_confirm_quit_to_menu_button_button_up"]
[connection signal="button_up" from="Control/QuitPopup2/NoConfirmQuitToMenuButton" to="." method="_on_no_confirm_quit_to_menu_button_button_up"]
